# ED-Patient-Flow-System

./: .gitignore  README.md  generate_keys.py
backend/: app.py  pyproject.toml  requirements.txt
backend/db/: hospital_data.db
backend/scripts/: run.sh  test.sh
backend/src/: app.py  config.py  server.py
backend/src/config/: database.py
backend/src/genai/: gpt.py
backend/src/hospital_data/: create_db.py  expected_time.py  hospital_api.py  hospital_getters.py  queue_data.py
backend/src/hospital_data/tests/: test_hospital_api.py
backend/src/models/: patient.py
backend/src/routes/: patient_routes.py
backend/src/tts/: elevenlabs.py  openai.py
backend/src/utils/: .env.py  app.py  error_handlers.py
frontend/ed-patient-flow-system/: package-lock.json  package.json  tailwind.config.ts
frontend/ed-patient-flow-system/src/app/: globals.css  layout.tsx  page.tsx
frontend/ed-patient-flow-system/src/app/patient/[id]/: page.tsx
frontend/ed-patient-flow-system/src/components/: ChatBot.tsx  EmailShare.tsx
slides/WaitWell/: slides.md
