[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["McHacks2025"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flasgger = "^0.9.7.1"
python-dotenv = "^1.0.1"
flask-mail = "^0.10.0"

requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
